* Minor correction in admin. Fixes for sidebar menus on narrow resolution. (Admin.template.php, Profile.template.php, index.css)
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@10531 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2915,7 +2915,10 @@ dl
 {
 	float: left;
 }
-
+#avatar_upload
+{
+	overflow: auto;
+}
 #main_admsection #basicinfo, #main_admsection #detailedinfo
 {
 	width: 100%;
@@ -3147,6 +3150,7 @@ div#profile_success
 	float: right;
 	width: 55%;
 	margin: 0 0 10px 2px;
+	overflow: auto;
 }
 
 .ignoreboards
